src/snapshots/ruff__linter__tests__T100_T100.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    Debugger: Import
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 10
  fix: ~
- kind:
    Debugger: Import
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix: ~
- kind:
    Debugger: Import
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 31
  fix: ~
- kind:
    Debugger: Import
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 40
  fix: ~
- kind:
    Debugger:
      Call: breakpoint
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 12
  fix: ~
- kind:
    Debugger:
      Call: st
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 4
  fix: ~
- kind:
    Debugger:
      Call: set_trace
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 11
  fix: ~

