src/snapshots/ruff__linter__tests__T201_T201.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PrintFound
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 23
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 1
      end_location:
        row: 2
        column: 1
    applied: false

