src/snapshots/ruff__linter__tests__T201_T201.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| print("Hello, world!")  # T201
|> `print` found

