src/snapshots/ruff__linter__tests__T203_T203.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  from pprint import pprint
  
| pprint("Hello, world!")  # T203
|> `pprint` found
  
  
  import pprint
  
| pprint.pprint("Hello, world!")  # T203
|> `pprint` found
  
  pprint.pformat("Hello, world!")

