src/snapshots/ruff__linter__tests__U001_U001.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  class A:
|     __metaclass__ = type
|> `__metaclass__ = type` is implied
  
  
  class B:
|     __metaclass__ = type
|> `__metaclass__ = type` is implied
  
      def __init__(self) -> None:
          pass
  
  
  class C(metaclass=type):
      pass

